# gl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.sh  main.cpp
engine/shaders/: base.f.glsl  base.v.glsl  cube.f.glsl  glass.f.glsl  glass.v.glsl  gouraud.f.glsl  luke.f.glsl  luke.v.glsl  simple.f.glsl  simple.v.glsl
engine/src/: CMakeLists.txt  main.cpp
lgll/: CMakeLists.txt
lgll/glad/src/: CMakeLists.txt
lgll/include/lgll/: constants.h  entity.h  geometry.h  image.h  scene.h  shader.h
lgll/src/: CMakeLists.txt  app.cpp  entity.cpp  geometry.cpp  image.cpp  scene.cpp  shader.cpp
models/: simple_cube.mtl  uv_sphere.mtl
shaders/: default.f.glsl  default.v.glsl  glass.f.glsl  glass.v.glsl  gouraud.v.glsl  phong.f.glsl  phong.v.glsl  simple.f.glsl  simple.v.glsl  suzanne.v.glsl
utils/: app.cpp  app.h  geometry.cpp  geometry.h  image.cpp  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h
